# SDK

./: Android.mk  CMakeLists.txt  FAQ.md  PROJECT_SUMMARY.md  README.md  build.sh
include/: dumper.hpp  logger.hpp  pattern_scanner.hpp  process_memory.hpp  ue_types.hpp
src/: main.cpp
src/dumper/: dumper.cpp
src/memory/: memory_utils.cpp  pattern_scanner.cpp  process_memory.cpp
src/utils/: logger.cpp
